A few more minor changes before sending off to supervisors

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -586,8 +586,8 @@ all $\ell\ell\tau\tau$ final states combined, is shown in figure \ref{fig:AZhUpp
 \caption[The expected and observed upper limits at the 95 \% CL on the 
 \xsbr for the \AtoZhtolltautau process.]{The expected (dashed) and observed (solid)
 upper limits at the 95\% \ac{CL} on the \xsbr for the \AtoZhtolltautau process.
-The green and yellow bands indicate the $\pm 1 \sigma $ and $\pm 2\sigma$
-expectations \cite{CMS-HIG-14-034}.}
+The green and yellow bands indicate the $\pm 1 \sigma $ and $\pm 2\sigma$ 
+probability intervals on the expected limit \cite{CMS-HIG-14-034}.}
 \label{fig:AZhUpperLimits}
 \end{center}
 \end{figure}
@@ -767,7 +767,8 @@ channel.
 \subfloat[]{\includegraphics[width=0.5\textwidth]{Hhh/Plots/hhh_limit_comparison.pdf}}
 \caption[Expected and observed upper limits at the 95\% CL on 
 \xsbr for the \Htohhtobbtautau process.]{Expected and observed upper limits at the 95\% \ac{CL} on \xsbr  
-for the \Htohhtobbtautau process. In (a) the three final states of \etau, \mutau and \tautau are combined \cite{CMS-HIG-14-034}.
+for the \Htohhtobbtautau process. In (a) the three final states of \etau, \mutau and \tautau are combined. The green and yellow bands indicate the $\pm 1 \sigma $ and $\pm 2\sigma$ 
+probability intervals on the expected limit  \cite{CMS-HIG-14-034}.
 (b) Shows the expected upper limits at the 95\% \ac{CL} on \xsbr for the \Htohhtobbtautau
 process, separated by channel. The blue line shows the limit for the \tautau channel, the green line for the \mutau channel, the red line
 for the \etau channel and the black line the limit for all three channels combined. Up to around \mH~$= 320\,\GeV$ the \mutau channel is the most
@@ -968,7 +969,7 @@ interpreted in (a) a type-II \ac{2HDM} assuming $m_{\PHiggs} = m_{\PHiggsps} = m
 (b) in the low-\tanb~MSSM scenario. The shaded blue area bounded by
 the solid black line indicates the observed excluded region at 95\% \ac{CL}.
 The dashed black line indicates the expected exclusion, with the grey bands showing
-the $\pm 1\sigma$ and $\pm2\sigma$ expected exclusion \cite{CMS-HIG-14-034}. The area
+the $\pm 1\sigma$ and $\pm2\sigma$ probability intervals on the expected exclusion \cite{CMS-HIG-14-034}. The area
 bounded by the red line is the region of phase space where \mh~$\neq 125 \pm 3\,\GeV$
  and is therefore excluded.}
 \label{fig:HhhAZhMSSM2HDM}
