--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -1362,8 +1362,8 @@ its lowest value gives the best fit values for $\mu_{\Pg\Pg\phi}$ and $\mu_{\Pbo
 $\mu_{\Pg\Pg\phi}^{N\%}$ and $\mu_{\Pbottom\Pbottom\phi}^{N\%}$ for which:
 \begin{equation}\label{eqn:mssm_2D_deltaNLL}
 \begin{split}
-\Delta(\text{NLL})_{68\%} = \text{NLL}(\text{best fit}) - \text{NLL}(\mu_{\Pg\Pg\phi}^{68\%},\mu_{\Pbottom\Pbottom\phi}^{68\%}) = 1.14, ~\\
-\Delta(\text{NLL})_{95\%} = \text{NLL}(\text{best fit}) - \text{NLL}(\mu_{\Pg\Pg\phi}^{95\%},\mu_{\Pbottom\Pbottom\phi}^{95\%}) = 3.00.
+\Delta(\text{NLL})_{68\%} &= \text{NLL}(\mu_{\Pg\Pg\phi}^{68\%},\mu_{\Pbottom\Pbottom\phi}^{68\%}) - \text{NLL}(\text{best fit}) = 1.14, ~\\
+\Delta(\text{NLL})_{95\%} &= \text{NLL}(\mu_{\Pg\Pg\phi}^{95\%},\mu_{\Pbottom\Pbottom\phi}^{95\%}) - \text{NLL}(\text{best fit}) = 3.00.
 \end{split}
 \end{equation}
 
@@ -1641,7 +1641,7 @@ obtained by the combination
 of all channels. The blue shaded area bounded by the 
 solid black line is the observed exclusion, with the dashed black line the
 expected exclusion. The light and dark grey bands indicate
-the $\pm 1\sigma$ and $\pm 2\sigma$ probability intervals on the expected exclusion in the \ac{SM} hypothesis.
+the $\pm 1\sigma$ and $\pm 2\sigma$ probability intervals on the expected exclusion under the \ac{SM} hypothesis.
 The red shaded area in the $m_{\PHiggslight}^{\text{mod}+}$ figure
 is excluded by the lack of a light Higgs boson with mass compatible with $125\,\GeV$ in the model \cite{CMS-PAS-HIG-16-037}.}
 \label{fig:mssm_mhmodp_2016}
@@ -1996,7 +1996,7 @@ obtained by the combination
 of all channels of the 2015 and 2016 \AHtotautau analyses. The blue shaded area bounded by the 
 solid black line is the observed exclusion, with the dashed black line the
 expected exclusion. The light and dark grey bands indicate
-the $\pm 1\sigma$ and $\pm 2\sigma$ probability intervals on the expected exclusion in the \ac{SM} hypothesis.
+the $\pm 1\sigma$ and $\pm 2\sigma$ probability intervals on the expected exclusion under the \ac{SM} hypothesis.
 The red shaded area in the $m_{\PHiggslight}^{\text{mod}+}$ figure
 is excluded by the lack of a light Higgs boson with mass compatible with $125\,\GeV$ in the model. The dashed (solid)
 blue lines indicate the expected (observed) exclusion from the 2016 analysis alone.}
