--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -89,4 +89,4 @@ not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and 
 
 %% Strictly optional!
 %% I don't want a page number on the following blank page either.
-\thispagestyle{empty}
+%\thispagestyle{empty}
